...
            name="viewModel"
            type="com.example.unlibrary.library.LibraryViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".library.LibraryFragment">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/library_book_list"
...
        </androidx.fragment.app.FragmentContainerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/fabAdd"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/fab_filter_description"
            android:src="@drawable/ic_search"
            app:backgroundTint="@color/colorAccent"
...
